--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,13 @@
   "scripts": {
     "start": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
-    "vite": "^7.1.9"
+    "vite": "^7.1.9",
+    "gh-pages": "^6.1.1"
   }
 }
